Fix issues with li-group and li-i18n-group
Both weren't sending the right description to schema. Also prevented issues with form by bringing back previously existing infobubble field

--- a/_includes/schema/components/li-group.html
+++ b/_includes/schema/components/li-group.html
@@ -3,6 +3,6 @@
   <details open>
     <summary>{{ include.group }} {% include schema/components/required.html required=include.param.required %} {% if include.array or include.param.more %}[array]{% else %}[string]{% endif %}</summary>
     <h5>{{ site.data.i18n.form[include.id][include.title].labels[include.group][page.lang] }}</h5>
-    <p>{{ site.data.i18n.form[include.id][path].infobulle[page.lang] }}</p>
+    <p>{{ site.data.i18n.form[include.id][path].infobulle[include.group][page.lang] }}</p>
   </details>
 </li>
