removed extra space in ul

--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -192,7 +192,7 @@
       <ul>
         {%- for tag in software.tags[page.lang] -%}
         <li>{{ tag }}</li>
-        &nbsp; {%- endfor -%}
+        {%- endfor -%}
       </ul>
       <div class="row">
         <div class="col-md-7">
