--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,6 +76,7 @@
 {%- if page.ref == "designForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/designForm.js"></script>
+<script src="../assets/js/src/designType.js"></script>
 {%- endif %}
 {%- if page.ref == "partnershipForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
