--- a/_includes/form/presets/designType.html
+++ b/_includes/form/presets/designType.html
@@ -34,8 +34,8 @@
           </div> 
         </div>
           <button id="newTypeButton" class="btn btn-primary" type="button"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.idPreset][title2].button[page.lang] }}</button>
-          <div id="newType" class="well hide">
-          <button id="newTypeButtonRemove" class="btn btn-default mrgn-lft-md" id="cancelTypeButton" style="display: none;"><i class="glyphicon glyphicon-remove"></i></button>
+          <div id="newType" class="well hide" style="position:relative">
+          <button type="button" class="btn btn-default remove" id="cancelnewTypeButton" style="position:absolute; top: 10px; right: 10px;"><i class="glyphicon glyphicon-remove"></i></button>
             <div id="newType{{ lang1 | upcase }}" class="form-group">
                 {% include form/components/label-i18n.html id=include.idPreset title=title2 lang=lang1 param=include.param %}
                 <div class="control-group input-group col-xs-2 mrgn-tp-md">
