--- a/_includes/designTable.html
+++ b/_includes/designTable.html
@@ -7,7 +7,7 @@
         <form class="wb-tables-filter" data-bind-to="dataset-filter">
           <div class="form-group">
             <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
-            <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
+            <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="6">
               <option value="">&nbsp;</option>
               {%- for govLevel in site.data.i18n.administrations -%}
               <option value="{{ govLevel[1].value }}">{{ govLevel[1][page.lang] }}</option>
@@ -16,25 +16,8 @@
           </div>
     
           <div class="form-group">
-            <label for="dt_category">{{ site.data.i18n.tables.category[page.lang] }}</label>
-            <select class="form-control" id="dt_category" name="dt_category" data-column="1">
-              <option value="">&nbsp;</option>
-              {%- assign cat_arr = "" | split: ',' -%}
-              {%- for designs in site.data.design -%}
-                {%- for category in designs[1].category -%}
-                  {%- assign cat_arr = cat_arr | push: category -%}
-                {%- endfor -%}
-              {%- endfor -%}
-              {%- assign cat_arr = cat_arr | uniq -%}
-              {%- for cat in cat_arr -%}
-                <option value="{{ site.data.i18n.categories[cat][page.lang] }}">{{ site.data.i18n.categories[cat][page.lang] }}</option>
-              {%- endfor -%}
-            </select>
-          </div>
-    
-          <div class="form-group">
             <label for="dt_licence">Licence</label>
-            <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
+            <select class="form-control" id="dt_licence" name="dt_licence" data-column="2">
               <option value="">&nbsp;</option>
               {%- assign licence_arr = "" | split: ',' -%}
               {%- for design in site.data.design -%}
@@ -50,22 +33,25 @@
           </div>
     
           <div class="form-group">
-            <label for="dt_tag">Tag</label>
-            <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
+            <label for="dt_type">Type</label>
+            <select class="form-control" id="dt_type" name="dt_type" data-column="3">
               <option value="">&nbsp;</option>
-              {%- assign tag_arr = "" | split: ',' -%}
+              {%- assign type_arr = "" | split: ',' -%}
+              {%- for defaultType in site.data.i18n.defaultTypes -%}
+                {%- assign type_arr = type_arr | push: defaultType -%}
+              {%- endfor -%}
               {%- for design in site.data.design -%}
-                {%- for tag in design[1].tags[page.lang] -%}
-                  {%- assign tag_arr = tag_arr | push: tag -%}
+                {%- for ntype in design[1].designTypes -%}
+                  {%- assign type_arr = type_arr | push: ntype -%}
                 {%- endfor -%}
               {%- endfor -%}
-              {%- assign tag_arr = tag_arr | group_by: "" | sort: "name" -%}
-              {%- for tag in tag_arr -%}
-                <option value="{{ tag.name }}">{{ tag.name }}</option>
+              {%- assign type_arr = type_arr | uniq | sort: "name" -%}
+              {%- for dtype in type_arr -%}
+                <option value="{{ dtype.type[page.lang] }}">{{ dtype.type[page.lang] }}</option>
               {%- endfor -%}
             </select>
           </div>
-    
+
           <div class="row">
             <div class="col-xs-6">
               <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.data.i18n.tables.filter[page.lang] }}</button>
@@ -81,14 +67,13 @@
     
     <!-- Data Table -->
     <div class="col-md-9 mrgn-bttm-lg">
-      <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [4,6,7], "visible": false}], "paging": true}'>
+      <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [5,6], "visible": false}], "paging": true}'>
         <thead>
           <tr>
             <th>{{ site.data.i18n.tables.design[page.lang] }}</th>
-            <th>{{ site.data.i18n.tables.category[page.lang] }}</th>
             <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
             <th>{{ site.data.i18n.tables.licence[page.lang] }}(s)</th>
-            <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
+            <th>{{ site.data.i18n.tables.designType[page.lang] }}</th>
             <th>{{ site.data.i18n.tables.usage[page.lang] }}</th>
             <th>{{ site.data.i18n.tables.homepage[page.lang] }}</th>
             <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
@@ -99,9 +84,6 @@
             {%- assign design = designs[1] -%}
             <tr>
               <td><a href="#{{ design.name[page.lang] | slugify }}" aria-controls="{{ design.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ design.name[page.lang] }}</a></td>
-              <td>
-                {{ site.data.i18n.categories[design.category][page.lang] }}
-              </td>
               <td>{{ design.description.whatItDoes[page.lang] }}</td>
               <td>
                 {%- for licence in design.licences -%}
@@ -109,8 +91,13 @@
                 {%- endfor -%}
               </td>
               <td>
-                {%- for tag in design.tags[page.lang] -%}
-                  {{ tag }}&nbsp;
+                {%- assign type_arr = "" | split: ',' -%}
+                {%- for ntype in design.designTypes -%}
+                  {%- assign type_arr = type_arr | push: ntype -%}
+                {%- endfor -%}
+                {%- assign type_arr = type_arr | uniq -%}
+                {%- for dtype in type_arr -%}
+                  <p>{{ dtype.type[page.lang] }}</p>
                 {%- endfor -%}
               </td>
               <td>{{ design.administrations.size }}</td>
@@ -142,10 +129,15 @@
           <div class="modal-body">
             <p><strong>Description:</strong></p>
             <p>{{ design.description.whatItDoes[page.lang] }}</p>
-            <p><strong>{{ site.data.i18n.tables.tag[page.lang] }}(s):</strong></p>
+            <p><strong>{{ site.data.i18n.tables.designType[page.lang] }}:</strong></p>
             <ul>
-              {%- for tag in design.tags[page.lang] -%}
-              <li>{{ tag }}</li>&nbsp;
+              {%- assign type_arr = "" | split: ',' -%}
+                {%- for ntype in design.designTypes -%}
+                  {%- assign type_arr = type_arr | push: ntype -%}
+                {%- endfor -%}
+                {%- assign type_arr = type_arr | uniq -%}
+                {%- for dtype in type_arr -%}
+                  <p>{{ dtype.type[page.lang] }}</p>
                 {%- endfor -%}
             </ul>
             <div class="row">
@@ -168,6 +160,9 @@
                 </div>
               </div>
             {%- endfor -%}
+            {%- if design.designStatus != nil -%}
+              <p><strong>{{ site.data.i18n.tables.designStatus[page.lang] }}</strong>: {{ design.designStatus[page.lang] }}</p>
+            {%- endif -%}
           </div>
         </section>
     {%- endfor -%}
