--- a/_includes/form/presets/status.html
+++ b/_includes/form/presets/status.html
@@ -1,4 +1,8 @@
+{%- if include.param.design -%}
+{%- assign title = "designStatus" -%}
+{%- else -%}
 {%- assign title = "status" -%}
+{%- endif -%}
   {% include form/components/label.html id=include.idPreset title=title param=site.data.forms.param.required_false %}
 <div class="form-group">
   <select class="form-control" id="{{ title }}" name="{{ title }}">
