--- a/_includes/schema/presets/status.html
+++ b/_includes/schema/presets/status.html
@@ -1,1 +1,6 @@
-{%- include schema/components/li.html id=include.idPreset title="status" param=site.data.forms.param.required_false -%}
+{%- if include.param.design -%}
+{%- assign title = "designStatus" -%}
+{%- else -%}
+{%- assign title = "status" -%}
+{%- endif -%}
+{%- include schema/components/li.html id=include.idPreset title=title param=site.data.forms.param.required_false -%}
