Modify what it does? Research subject and how it work? to Abstract
Co-authored-by: fnduister@gmail.com

--- a/_includes/form/presets/description.html
+++ b/_includes/form/presets/description.html
@@ -1,14 +1,44 @@
 {%- assign title = "description" -%}
-{%- include form/components/title.html id=include.idPreset title=title -%}
+
+{%- if include.param.model -%}
+    {%- include form/components/title.html
+    id="research" title=title -%}
+    {%- assign descriptionPosition = "research" -%}
+    {%- else -%}
+    {%- include form/components/title.html
+        id=include.idPreset title=title -%} 
+    {%- assign descriptionPosition = include.idPreset -%}
+{%- endif -%}
 <div class="row">
-<div class="col-sm-6">
-<h3>{{ site.data.i18n.form.presets.description.labels.whatItDoes.subtitle[page.lang] }} </h3>
-<p><small style="font-size: 75%">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small> </p>
-{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="whatItDoes" -%}
-</div>
-<div class="col-sm-6">
-<h3>{{ site.data.i18n.form.presets.description.labels.howItWorks.subtitle[page.lang] }} </h3>
-<p><small style="font-size: 75%">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small></p>
-{%- include form/components/textarea-i18n.html id=include.idPreset title=title group="howItWorks" param=site.data.forms.param.required_false -%}
-</div>
+  <div class="col-sm-6">
+    <h3>
+      {{
+      site.data.i18n.form[descriptionPosition][title].labels.whatItDoes.subtitle[page.lang]
+      }}
+    </h3>
+    <p>
+      <small style="font-size: 75%"
+        >{{ site.data.i18n.form[descriptionPosition][title].charactersLimit[page.lang]
+        }}</small
+      >
+    </p>
+    {%- include form/components/textarea-i18n.html id=include.idPreset
+    title=title group="whatItDoes" -%}
+  </div>
+  <div class="col-sm-6">
+    <h3>
+      {{
+      site.data.i18n.form[descriptionPosition][title].labels.howItWorks.subtitle[page.lang]
+      }}
+    </h3>
+    <p>
+      <small style="font-size: 75%"
+        >{{ site.data.i18n.form[descriptionPosition][title].charactersLimit[page.lang]
+        }}</small
+      >
+    </p>
+    {%- include form/components/textarea-i18n.html id=include.idPreset
+    title=title group="howItWorks" param=site.data.forms.param.required_false
+    -%}
+  </div>
 </div>
