Fixed duplicate id

--- a/_includes/designTable.html
+++ b/_includes/designTable.html
@@ -54,7 +54,7 @@
 
           <div class="form-group">
             <label for="dt_type">Design Status</label>
-            <select class="form-control" id="dt_type" name="dt_type" data-column="6">
+            <select class="form-control" id="dt_status" name="dt_status" data-column="6">
               <option value="">&nbsp;</option>
               <option value="{{site.data.i18n.form.presets.designStatus.options.Used[page.lang]}}">{{ site.data.i18n.form.presets.designStatus.options.Used[page.lang] }}</option>
               <option value="{{site.data.i18n.form.presets.designStatus.options.Modified[page.lang]}}"> {{site.data.i18n.form.presets.designStatus.options.Modified[page.lang]}} </option>
