--- a/_includes/designTable.html
+++ b/_includes/designTable.html
@@ -53,7 +53,7 @@
           </div>
 
           <div class="form-group">
-            <label for="dt_type">Design Status</label>
+            <label for="dt_status">Design Status</label>
             <select class="form-control" id="dt_status" name="dt_status" data-column="6">
               <option value="">&nbsp;</option>
               <option value="{{site.data.i18n.form.presets.designStatus.options.Used[page.lang]}}">{{ site.data.i18n.form.presets.designStatus.options.Used[page.lang] }}</option>
