--- a/_includes/form/presets/status.html
+++ b/_includes/form/presets/status.html
@@ -8,7 +8,7 @@
   <select class="form-control" id="{{ title }}" name="{{ title }}">
     <option value="">&nbsp;</option>
     {%- for option in site.data.i18n.form[include.idPreset][title].options -%}
-    <option value="{{ option[1].en }}">{{ option[1][page.lang] }}</option>
+    <option value="{{ option[1].en }}" data-fr="{{ option[1].fr }}">{{ option[1][page.lang] }}</option>
     {%- endfor %}
   </select>
 </div>
