--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -4,6 +4,7 @@
 <div class="add-more-content">
 <div class="form-group">
     {% include form/components/label-group.html id=include.idPreset title=title group="spdxID" %}
+    
     <select class="form-control" id="{{ title }}spdxID" name="{{ title }}spdxID" required="required">
       <option value="">&nbsp;</option>
       {%- assign licence_arr = site.data.spdx.json.licenses.licenses | where:"isDeprecatedLicenseId","false" -%}
@@ -15,8 +16,9 @@
     </select>
   </div>
 {% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licences -%}
-
-  <div class="form-group" id="{{ title }}levelSelect">
+<div class="form-group">
+<div class="form-group" style="display:flex;">
+  <div class="{{ title }}levelSelect more-group-id-replace">
     {% include form/components/label-group.html id=include.idPreset title=title group="level" %}
     <select class="form-control" id="{{ title }}level" name="{{ title }}level" required="required">
       {%- assign level = site.data.i18n.form[include.idPreset]licensesLevel.level -%}
@@ -24,10 +26,12 @@
       <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
     </select>
   </div>
+</div>
   <div  class="form-group">
-    <div­ id="{{ title }}Scope" class="well hide" style="position:relative">
+    <div­ id="{{ title }}Scope" class="hide" style="position:relative" >
       {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
     </div>
   </div>
+</div>
 </div>
 </div>
