--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -22,6 +22,7 @@
     {% include form/components/label-group.html id=include.idPreset title=title group="level" %}
     <select class="form-control" id="{{ title }}level" name="{{ title }}level" required="required">
       {%- assign level = site.data.i18n.form[include.idPreset]licensesLevel.level -%}
+      <option value="">&nbsp;</option>
       <option value="{{ level.main.en }}" data-fr="{{level.main.fr}}">{{ level.main[page.lang] }}</option>
       <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
     </select>
