--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -15,8 +15,7 @@
       {%- endfor -%}
     </select>
 {% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licences -%}
-<div class="form-group" style="display:flex;">
-  <div class="{{ title }}levelSelect more-group-id-replace">
+<div class="{{ title }}levelSelect form-group" style="display:flex;">
     {% include form/components/label-group.html id=include.idPreset title=title group="level" %}
     <select class="form-control" id="{{ title }}level" name="{{ title }}level" required="required">
       {%- assign level = site.data.i18n.form[include.idPreset]licensesLevel.level -%}
@@ -24,7 +23,6 @@
       <option value="{{ level.main.en }}" data-fr="{{level.main.fr}}">{{ level.main[page.lang] }}</option>
       <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
     </select>
-  </div>
 </div>
     <div­ id="{{ title }}Scope" class="hide" style="position:relative">
       {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
