--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -24,7 +24,9 @@
       <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
     </select>
 </div>
-    
+<div­ id="{{ title }}Scope" class="hide" style="position:relative">
+  {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
+</div>
 </div>
 </div>
 </div>
