Reset this branch

--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -14,23 +14,19 @@
         {%- endif -%}
       {%- endfor -%}
     </select>
-  </div>
 {% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licences -%}
-<div class="form-group">
-<div class="form-group" style="display:flex;">
-  <div class="{{ title }}levelSelect more-group-id-replace">
-    {% include form/components/label-group.html id=include.idPreset title=title group="level" %}
+{% include form/components/label-group.html id=include.idPreset title=title group="level" %}
+<div class="{{ title }}levelSelect form-group" style="display:flex;">
     <select class="form-control" id="{{ title }}level" name="{{ title }}level" required="required">
       {%- assign level = site.data.i18n.form[include.idPreset]licensesLevel.level -%}
       <option value="">&nbsp;</option>
       <option value="{{ level.main.en }}" data-fr="{{level.main.fr}}">{{ level.main[page.lang] }}</option>
       <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
     </select>
-  </div>
 </div>
-    <div­ id="{{ title }}Scope" class="hide" style="position:relative" >
-      {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
-    </div>
+<div­ id="{{ title }}Scope" class="hide">
+  {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
+</div>
 </div>
 </div>
 </div>
