Trying to change the div

--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -23,7 +23,7 @@
           <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
         </select>
       </div>
-      <div­ id="{{ title }}Scope" class="well hide">
+      <div­ id="{{ title }}Scope" class="well hide form-group">
         {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
       </div>
     </div>
