Now with the problem div

--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -21,9 +21,9 @@
         <option value="{{ level.main.en }}" data-fr="{{level.main.fr}}">{{ level.main[page.lang] }}</option>
         <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
       </select>
-     <!-- <div­ id="{{ title }}Scope" class="well hide">-->
+      <div­ id="{{ title }}Scope" class="well hide">
         {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
-     <!-- </div> -->
+      </div> 
     </div>
   </div>
 </div>
