--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -13,6 +13,7 @@
           {%- endif -%}
         {%- endfor -%}
       </select>
+      
       {% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licences -%}
       {% include form/components/label-group.html id=include.idPreset title=title group="level" %}
       <select class="{{ title }}level form-control" id="{{ title }}level" name="{{ title }}level" required="required">
@@ -21,6 +22,9 @@
         <option value="{{ level.main.en }}" data-fr="{{level.main.fr}}">{{ level.main[page.lang] }}</option>
         <option value="{{ level.sub.en }}" data-fr="{{level.sub.fr}}">{{ level.sub[page.lang] }}</option>
       </select>
-      <div­ id="{{ title }}Scope" class="hide">{% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}</div>
+      <div id="{{ title }}Scope" class="hide">
+       {% include form/components/group-i18n-group.html id=include.idPreset title=title group="scope"  -%}
+      </div>
+    </div>
   </div>
 </div>
