tags are working for each form

--- a/_includes/form/presets/tags.html
+++ b/_includes/form/presets/tags.html
@@ -9,10 +9,11 @@
 {%- endif -%}
 <div id="tags">
   <div id="tags{{ lang1 | upcase }}" class="form-group">
-    {%- include form/presets/tagInput.html idPreset=include.idPreset lang=lang1 title=title -%}
+    {%- include form/presets/tagInput.html idPreset=include.idPreset lang=lang1 id=include.id title=title param=include.param -%}
   </div>
+  <p>{{include.id}}</p>
   <div id="tags{{ lang2 | upcase }}" class="form-group">
-    {%- include form/presets/tagInput.html idPreset=include.idPreset lang=lang2 title=title -%}
+    {%- include form/presets/tagInput.html idPreset=include.idPreset lang=lang2 id=include.id title=title param=include.param -%}
   </div>
 </div>
 <div class="input-group control-group after-add-more col-xs-2">
