--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -30,22 +30,22 @@
             {% for admin in govLevels[1] %}
             {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
             {%- if administration[0] != nil -%}
-              {%- if level == 3 -%}
+              {%- if level == 1 -%}
                 {%- assign federal_arr = federal_arr | push: administration[0]-%}
-              {%- elsif level == 0 -%}
-                {%- assign provincial_arr = provincial_arr | push: administration[0]-%}
-              {%- elsif level == 1 -%}
-                {%- assign municipal_arr = municipal_arr | push: administration[0]-%}
-              {%- elsif level == 2 -%}
-                {%- assign aboriginal_arr = aboriginal_arr | push: administration[0]-%}
               {%- elsif level == 4 -%}
+                {%- assign provincial_arr = provincial_arr | push: administration[0]-%}
+              {%- elsif level == 2 -%}
+                {%- assign municipal_arr = municipal_arr | push: administration[0]-%}
+              {%- elsif level == 0 -%}
+                {%- assign aboriginal_arr = aboriginal_arr | push: administration[0]-%}
+              {%- elsif level == 3 -%}
                 {%- assign other_arr = other_arr | push: administration[0]-%}
               {%- endif -%}
             {%- endif -%}
             {%- endfor -%}
             {%- assign level = level | plus:1 -%}
           {%- endfor -%}
-          {%- assign federal_arr = federal_arr -%}
+          {%- assign federal_arr = federal_arr | uniq -%}
           {%- assign provincial_arr = provincial_arr | uniq -%}
           {%- assign municipal_arr = municipal_arr | uniq -%}
           {%- assign aboriginal_arr = aboriginal_arr | uniq -%}
@@ -68,7 +68,7 @@
             {%- assign id = id | plus: 1 -%}
           {%- endfor -%}
           {%- for other in other_arr -%}
-            <option class="hide" id="{{id}}" value="{{other.name[page.lang]}}" data-level="other">{{other.name[page.lang]}}</option>
+            <option class="hide" id="{{id}}" value="{{other.name[page.lang]}}" data-level="others">{{other.name[page.lang]}}</option>
             {%- assign id = id | plus: 1 -%}
           {%- endfor -%}
         </select>
