--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -69,7 +69,7 @@
               {%- assign id = id | plus: 1 -%}
             {%- endfor -%}
             {%- for other in other_arr -%}
-              <option class="hide" id="{{id}}" value="{{other.code}}" data-level="other">{{other.name[page.lang]}}</option>
+              <option class="hide" id="{{id}}" value="{{other.code}}" data-level="others">{{other.name[page.lang]}}</option>
               {%- assign id = id | plus: 1 -%}
             {%- endfor -%}
           </select>
